<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FilterListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="#fff">

        <ImageView
            android:id="@+id/closeDialog"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/filterListField"
            android:entries="@array/filter_list_field"
            app:layout_constraintTop_toBottomOf="@+id/closeDialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/filterRangeType"
            android:layout_width="100dp"
            android:entries="@array/filter_range_type"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/filterListButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/filterValue"
            android:inputType="number"
            android:hint="Enter A Number"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/filterRangeType"
            app:layout_constraintTop_toTopOf="@id/filterRangeType"
            app:layout_constraintBottom_toBottomOf="@id/filterRangeType"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/filterListButton"
            android:text="Filter"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>