<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/globalLayiut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/totalConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rectnagular_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_confirmed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalDeaths"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rectnagular_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_deaths"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalRecovered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/totalConfirmed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/totalRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rectnagular_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/total_recovered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/totalDeaths"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerText"
        app:layout_constraintTop_toBottomOf="@+id/globalLayiut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Contry"
            android:textColor="#000"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/totalCases"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/totalCases"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Total Cases"
            android:textColor="#000"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/deaths"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/countryName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Deaths"
            android:textColor="#000"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/recovered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/totalCases"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Recovered"
            android:textColor="#000"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/deaths"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/partion"
        app:layout_constraintTop_toBottomOf="@id/headerText"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/partion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ImageView
        android:id="@+id/scrollDown"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/recyclerView"
        app:layout_constraintRight_toRightOf="@id/recyclerView"
        android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/scrollUp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintRight_toRightOf="@id/recyclerView"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_width="50dp"
        android:layout_height="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>